--- a/行李清單.html
+++ b/行李清單.html
@@ -12,7 +12,7 @@
 
     <style>
         body {
-            background-image: url('./img/澎湖\ 天堂路.jpg');
+            background-image: url('./img/ash-edmonds-uztw2giebSc-unsplash.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100% 100%;
@@ -32,7 +32,7 @@
     <!-- 導覽列 -->
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: rgba(255, 255, 255, 0.5);">
         <div class="container-fluid">
-            <a class="navbar-brand nav-link ms-3" href="/小專題.html"><i class="bi bi-house"></i> Home</a>
+            <a class="navbar-brand nav-link ms-3" href="./小專題v2.html"><i class="bi bi-house"></i> Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
