--- a/小專題v2.html
+++ b/小專題v2.html
@@ -51,7 +51,7 @@
                     <div class="carousel-item active">
                         <a href="https://www.kiyomizudera.or.jp/" target="_blank"><img src="./img/清水寺 夜楓2.jpg"
                                 alt="清水寺"></a>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
                             <h5>清水寺 夜楓</h5>
                             <p>楓夜季,夜間特別開放</p>
                         </div>
@@ -59,14 +59,14 @@
                     <div class="carousel-item">
                         <a href="https://www.shokoku-ji.jp/kinkakuji/" target="_blank"><img src="./img/金閣寺.jpg"
                                 alt="金閣寺"></a>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
                             <h5>金閣寺</h5>
                             <p>位於京都的著名禪宗寺廟，以其金箔覆蓋的「舍利殿」（金閣）而聞名</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <a href="https://nijo-jocastle.city.kyoto.lg.jp/"><img src="./img/二条城 庭院.jpg" alt="二条城庭院"></a>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
                             <h5>二条城</h5>
                             <p>二之丸御殿的庭院</p>
                         </div>
@@ -74,7 +74,7 @@
                     <div class="carousel-item">
                         <a href="https://www.hozugawakudari.jp/tickets" target="_blank"><img src="./img/保津川遊船2.jpg"
                                 alt="保津川遊船"></a>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
                             <h5>保津川遊船</h5>
                             <p>穿越西京都野外山丘的遊船之旅</p>
                         </div>
@@ -82,7 +82,7 @@
                     <div class="carousel-item">
                         <a href="https://www.kyoto-nishiki.or.jp/" target="_blank"><img src="./img/錦市場.png"
                                 alt="錦市場"></a>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
                             <h5>錦市場</h5>
                             <p>有「京都的廚房」之稱商店街</p>
                         </div>
@@ -101,15 +101,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section id="contentblock2">
-        <div class="" style="background-color: aqua;">
-            <button class="" style="background-color: aquamarine;">
-
-            </button>
-        </div>
-
-    </section> -->
 
     <!-- 選單按鈕 -->
     <section id="contentblock">
