v2-2 新增交通景點

--- a/小專題v2.html
+++ b/小專題v2.html
@@ -116,8 +116,14 @@
                 <button class="radial-menu-child-button" data-content-id="live-content">
                     住宿
                 </button>
-                <button class="radial-menu-child-button" data-content-id="1-content">
-                    <i class="bi bi-bell-fill"></i>
+                <button class="radial-menu-child-button" data-content-id="transportation-content">
+                    交通
+                </button>
+                <button class="radial-menu-child-button" data-content-id="attractions-content">
+                    景點
+                </button>
+                <button class="radial-menu-child-button" data-content-id="non-content">
+                    空白
                 </button>
             </div>
         </div>
@@ -215,8 +221,136 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
-        <div id="" class="content-item">
-
+        <!-- 交通 -->
+        <div id="transportation-content" class="content-item">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/交通/HARUKA.png" class="card-img-top" alt="HARUKA">
+                        <div class="card-body">
+                            <h5 class="card-title">HARUKA</h5>
+                            <a href="https://www.westjr.co.jp/global/tc/travel/shopping/access/train.html" class="btn btn-outline-primary" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/交通/KIX 機場巴士.png" class="card-img-top" alt="KIX 機場巴士">
+                        <div class="card-body">
+                            <h5 class="card-title">KIX 機場巴士</h5>
+                            <a href="https://www.kate.co.jp/tcn/timetable/detail/KY" class="btn btn-outline-primary" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/交通/京都市地下鐵.png" class="card-img-top" alt="京都市地下鐵">
+                        <div class="card-body">
+                            <h5 class="card-title">京都市地下鐵</h5>
+                            <a href="https://www2.city.kyoto.lg.jp/kotsu/tikadia/tikatime.htm" class="btn btn-outline-primary" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/交通/京都市巴士.png" class="card-img-top" alt="京都市巴士">
+                        <div class="card-body">
+                            <h5 class="card-title">京都市巴士</h5>
+                            <a href="https://www2.city.kyoto.lg.jp/kotsu/busdia/bustime.htm" class="btn btn-outline-primary" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/交通/京都巴士.jpg" class="card-img-top" alt="京都巴士">
+                        <div class="card-body">
+                            <h5 class="card-title">京都巴士</h5>
+                            <a href="https://www.kyotobus.jp/route/index.html" class="btn btn-outline-primary" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/交通/JR西日本.png" class="card-img-top" alt="JR西日本">
+                        <div class="card-body">
+                            <h5 class="card-title">JR西日本</h5>
+                            <a href="https://www.train-guide.westjr.co.jp/area_kinki.html" class="btn btn-outline-primary" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 景點 -->
+        <div id="attractions-content" class="content-item">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/金閣寺.jpg" class="card-img-top" alt="金閣寺">
+                        <div class="card-body">
+                            <h5 class="card-title">金閣寺</h5>
+                            <a href="https://www.shokoku-ji.jp/kinkakuji/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/北野天滿宮.jpg" class="card-img-top" alt="北野天滿宮">
+                        <div class="card-body">
+                            <h5 class="card-title">北野天滿宮</h5>
+                            <a href="https://kitanotenmangu.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/錦市場.jpg" class="card-img-top" alt="錦市場">
+                        <div class="card-body">
+                            <h5 class="card-title">錦市場</h5>
+                            <a href="https://www.kyoto-nishiki.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/八坂神社.jpg" class="card-img-top" alt="八坂神社">
+                        <div class="card-body">
+                            <h5 class="card-title">八坂神社</h5>
+                            <a href="https://www.yasaka-jinja.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/清水寺 夜楓2.jpg" class="card-img-top" alt="清水寺">
+                        <div class="card-body">
+                            <h5 class="card-title">清水寺</h5>
+                            <a href="https://www.kiyomizudera.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/伏見稻荷大社.jpg" class="card-img-top" alt="伏見稻荷大社">
+                        <div class="card-body">
+                            <h5 class="card-title">伏見稻荷大社</h5>
+                            <a href="https://inari.jp/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/景點/二条城.jpg" class="card-img-top" alt="二条城">
+                        <div class="card-body">
+                            <h5 class="card-title">二条城</h5>
+                            <a href="https://nijo-jocastle.city.kyoto.lg.jp/" class="btn btn-outline-success" target="_blank">go</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 空白內容 -->
+        <div id="non-content" class="content-item">
+            <br><br><br><br><br><br><br><br>
         </div>
     </div>
 
