--- a/小專題v2.html
+++ b/小專題v2.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="/img/files.svg">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./小專題v2css.css">
-    <script src="./小專題jsv2.js"></script>
+    <link rel="stylesheet" href="./小專題v2.css">
+    <script src="./小專題v2.js"></script>
     <script src="./楓葉背景.js"></script>
     <link rel="stylesheet" href="./楓葉背景.css">
     <script src="../js/bootstrap.bundle.js"></script>
@@ -123,7 +123,7 @@
                     景點
                 </button>
                 <button class="radial-menu-child-button" data-content-id="non-content">
-                    空白
+                    賞楓
                 </button>
             </div>
         </div>
@@ -227,7 +227,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/交通/HARUKA.png" class="card-img-top" alt="HARUKA">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">HARUKA</h5>
                             <a href="https://www.westjr.co.jp/global/tc/travel/shopping/access/train.html" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
@@ -236,7 +236,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/交通/KIX 機場巴士.png" class="card-img-top" alt="KIX 機場巴士">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">KIX 機場巴士</h5>
                             <a href="https://www.kate.co.jp/tcn/timetable/detail/KY" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
@@ -245,7 +245,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/交通/京都市地下鐵.png" class="card-img-top" alt="京都市地下鐵">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">京都市地下鐵</h5>
                             <a href="https://www2.city.kyoto.lg.jp/kotsu/tikadia/tikatime.htm" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
@@ -254,7 +254,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/交通/京都市巴士.png" class="card-img-top" alt="京都市巴士">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">京都市巴士</h5>
                             <a href="https://www2.city.kyoto.lg.jp/kotsu/busdia/bustime.htm" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
@@ -263,7 +263,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/交通/京都巴士.jpg" class="card-img-top" alt="京都巴士">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">京都巴士</h5>
                             <a href="https://www.kyotobus.jp/route/index.html" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
@@ -272,7 +272,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/交通/JR西日本.png" class="card-img-top" alt="JR西日本">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">JR西日本</h5>
                             <a href="https://www.train-guide.westjr.co.jp/area_kinki.html" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
@@ -286,7 +286,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/金閣寺.jpg" class="card-img-top" alt="金閣寺">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">金閣寺</h5>
                             <a href="https://www.shokoku-ji.jp/kinkakuji/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
@@ -295,7 +295,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/北野天滿宮.jpg" class="card-img-top" alt="北野天滿宮">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">北野天滿宮</h5>
                             <a href="https://kitanotenmangu.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
@@ -304,7 +304,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/錦市場.jpg" class="card-img-top" alt="錦市場">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">錦市場</h5>
                             <a href="https://www.kyoto-nishiki.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
@@ -313,7 +313,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/八坂神社.jpg" class="card-img-top" alt="八坂神社">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">八坂神社</h5>
                             <a href="https://www.yasaka-jinja.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
@@ -322,7 +322,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/清水寺 夜楓2.jpg" class="card-img-top" alt="清水寺">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">清水寺</h5>
                             <a href="https://www.kiyomizudera.or.jp/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
@@ -331,7 +331,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/伏見稻荷大社.jpg" class="card-img-top" alt="伏見稻荷大社">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">伏見稻荷大社</h5>
                             <a href="https://inari.jp/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
@@ -340,7 +340,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/景點/二条城.jpg" class="card-img-top" alt="二条城">
-                        <div class="card-body">
+                        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">二条城</h5>
                             <a href="https://nijo-jocastle.city.kyoto.lg.jp/" class="btn btn-outline-success" target="_blank">go</a>
                         </div>
